kubernetes/arise-realtime/patch-deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arise-realtime
spec:
  template:
    spec:
      containers:
        - name: arise-realtime
