kubernetes/arise-realtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arise-realtime
  labels:
    app: arise-realtime
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: arise-realtime
